<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_support"
        android:title="@string/action_support"
        android:orderInCategory="200"
        app:showAsAction="never"/>
    <item android:id="@+id/action_social"
        android:title="@string/action_social"
        android:orderInCategory="300"
        app:showAsAction="never"/>
    <item android:id="@+id/action_instructions"
        android:title="@string/action_instructions"
        android:orderInCategory="400"
        app:showAsAction="never"/>
    <item android:id="@+id/action_copyright"
        android:title="@string/action_copyright"
        android:orderInCategory="500"
        app:showAsAction="never"/>
</menu>
