<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_measures">

        <ListPreference
            app:defaultValue="kilograms"
            app:entries="@array/weight_entries"
            app:entryValues="@array/weight_values"
            app:key="weight"
            app:title="@string/settings_weight"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="liters"
            app:entries="@array/volume_entries"
            app:entryValues="@array/volume_values"
            app:key="volume"
            app:title="@string/settings_volume"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="centimeters"
            app:entries="@array/length_entries"
            app:entryValues="@array/length_values"
            app:key="length"
            app:title="@string/settings_length"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_duration">

        <ListPreference
            app:defaultValue="12hours"
            app:entries="@array/time_entries"
            app:entryValues="@array/time_values"
            app:key="time"
            app:title="@string/settings_time"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="dayDash"
            app:entries="@array/date_entries"
            app:entryValues="@array/date_values"
            app:key="date"
            app:title="@string/settings_date"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
