<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_journal">

    <fragment
        android:id="@+id/nav_journal"
        android:name="com.mydigitalmedicaljournal.ui.journal.JournalFragment"
        android:label="@string/drawer_journal"
        tools:layout="@layout/fragment_journal" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.mydigitalmedicaljournal.ui.reports.ReportsFragment"
        android:label="@string/drawer_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.mydigitalmedicaljournal.ui.calendar.CalendarFragment"
        android:label="@string/drawer_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_templates"
        android:name="com.mydigitalmedicaljournal.ui.templates.TemplatesFragment"
        android:label="@string/drawer_templates"
        tools:layout="@layout/fragment_templates" />

</navigation>