<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/label_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/value_input"
            android:paddingStart="@dimen/xlarge"
            android:paddingEnd="@dimen/large"
            android:text="@string/value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/value_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/label_input"
            android:paddingStart="@dimen/large"
            android:paddingEnd="@dimen/large"
            android:text="@string/label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/value_input"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/label_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete"
            android:paddingStart="@dimen/medium"
            android:paddingEnd="@dimen/medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/error_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/small"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/error_text"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/error_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_item" />

    <TextView
        android:id="@+id/error_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/small"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/error_text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/error_value"
        app:layout_constraintTop_toBottomOf="@id/label_item" />

</androidx.constraintlayout.widget.ConstraintLayout>